MPlayer (1.0)

  rc4: "Yes We Can"
    Gui: Changes towards removing the Gui
    * The Gui will no longer display any error or warning messages

    Decoders:
    * YUY2 Lossless Codec (YLC0) via binary DLL
    * Truemotion RT codec (TR20) via binary DLL
    * Nogantech Codec (NTN1 and NTN2) via binary DLL
    * add new FourCCs (m1v1, yuvs, VYUY, Y42B, V422, YUNV, UYNV, UYNY, uyv1,
      2Vu1, P422, HDYC, IJLV, MVJP)
      TwoCCs (0xA106, 0x6c75, 0xAAC0, 0x55005354)
      to existing decoders.
    * AMR now handled via OpenCORE decoder
    * updated Windows Media Screen Codec (MSS1, MSS2) via binary DLL
    * CoreAVC H.264 decoder via binary DLL (Windows only)
    * Kega Game video codec (KGV1) via binary DLL
    * SoftLab-NSK Forward MPEG-2 I-frames (SLIF) via binary DLL
    * JPEG 2000 support via OpenJPEG
    * internal liba52 copy removed
    * CineForm HD (CFHD) via binary DLL
    * VP8 decoding through libvpx wrapper in FFmpeg
    * support for external libmpeg2 added

    Demuxers:
    * Mostly fixed timing issues with some H.264 (PAFF) samples
    * Matroska and Ogg demuxers switched to use libavformat by default.
      Report issues and use -demuxer ogg and -demuxer mkv to work around them.
    * support for TrueHD in Blu-ray streams in libmpdemux
    * more Blu-ray codec support with lavf
    * fix length in ASF/WMV files
    * support ISDB-Tb DVB streams

    Filters:
    * remove vf_yuy2, functionality is replaced by -vf format=yuv2
    * remove vf_rgb2bgr, functionality is replaced by sws and vf_format

    Drivers:
    * -vo yuv4mpeg:interlaced no longer does its own interlaced RGB->YUV
      conversion. Use -vf scale=::1 to keep the same behaviour and report
      if there are any issues with that.
    * X11: Window manager choses Window position by default.
      Add geometry=50%:50% to your configuration to get the old behaviour.
    * -vo md5sum md5 calculation changed so output matches FFmpeg's -f framemd5