@@ -174,9 +174,6 @@ screenshot <value>
         0 Take a single screenshot.
         1 Start/stop taking screenshot of each frame.
 
-gui_[about|loadfile|loadsubtitle|play|playlist|preferences|skinbrowser|stop]
-    GUI actions
-
 key_down_event <value>
     Inject <value> key code event into MPlayer.
 
