@@ -143,18 +143,6 @@ typedef enum {
   MP_CMD_DVDNAV_PREVMENU,
   MP_CMD_DVDNAV_MOUSECLICK,
 
-  /// GUI commands
-  MP_CMD_GUI_EVENTS = 5000,
-  MP_CMD_GUI_LOADFILE,
-  MP_CMD_GUI_LOADSUBTITLE,
-  MP_CMD_GUI_ABOUT,
-  MP_CMD_GUI_PLAY,
-  MP_CMD_GUI_STOP,
-  MP_CMD_GUI_PLAYLIST,
-  MP_CMD_GUI_PREFERENCES,
-  MP_CMD_GUI_FULLSCREEN,
-  MP_CMD_GUI_SKINBROWSER,
-
   /// DVB commands
   MP_CMD_DVB_SET_CHANNEL = 5101,
 
